Fixed bug, gameInit is no longer nested.

--- a/ScorchedServer/ScorchedServer/ScorchedServer.csproj
+++ b/ScorchedServer/ScorchedServer/ScorchedServer.csproj
@@ -78,6 +78,7 @@
     </Compile>
     <Compile Include="Models\Connection.cs" />
     <Compile Include="Models\Game.cs" />
+    <Compile Include="Models\Landscape.cs" />
     <Compile Include="Models\Messages\Message.cs" />
     <Compile Include="Models\Messages\FireRequest.cs" />
     <Compile Include="Models\Messages\GenericMessage.cs" />
