--- a/ScorchedServer/ScorchedServer/Web.config
+++ b/ScorchedServer/ScorchedServer/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 
 <!--
   For more information on how to configure your ASP.NET application, please visit
@@ -15,7 +15,7 @@
       </assemblies>
     </compilation>
 
-    <authentication mode="Forms">
+    <authentication mode="Windows">
       <forms loginUrl="~/Account/LogOn" timeout="2880" />
     </authentication>
 
@@ -30,8 +30,8 @@
   </system.web>
 
   <system.webServer>
-    <validation validateIntegratedModeConfiguration="false"/>
-    <modules runAllManagedModulesForAllRequests="true"/>
+    <validation validateIntegratedModeConfiguration="false" />
+    <modules runAllManagedModulesForAllRequests="true" />
   </system.webServer>
 
   <runtime>
