Updated vector code on server. Collission detection will have to be updated to support rotated tanks.

--- a/ScorchedServer/ScorchedServer/Web.config
+++ b/ScorchedServer/ScorchedServer/Web.config
@@ -6,6 +6,11 @@
   -->
 
 <configuration>
+  <configSections>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="ScorchedServer.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <system.web>
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
@@ -42,5 +47,15 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <applicationSettings>
+    <ScorchedServer.Properties.Settings>
+      <setting name="tankWidth" serializeAs="String">
+        <value>40</value>
+      </setting>
+      <setting name="tankHeight" serializeAs="String">
+        <value>10</value>
+      </setting>
+    </ScorchedServer.Properties.Settings>
+  </applicationSettings>
 </configuration>
 
