--- a/ScorchedServer/ScorchedServer/ScorchedServer.csproj
+++ b/ScorchedServer/ScorchedServer/ScorchedServer.csproj
@@ -104,6 +104,11 @@
     <Compile Include="Models\Weapon.cs" />
     <Compile Include="Models\World.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
@@ -113,11 +118,13 @@
     <Content Include="play\index.html" />
     <Content Include="play\jquery-1.4.4.min.js" />
     <Content Include="play\nepsocket.js" />
+    <Content Include="play\player.js" />
     <Content Include="play\render.js" />
     <Content Include="play\socketimpl.js" />
     <Content Include="play\style.css" />
     <Content Include="play\userinput.js" />
     <Content Include="play\utils.js" />
+    <Content Include="play\vector.js" />
     <Content Include="play\world.js" />
     <Content Include="screenshot.png" />
     <Content Include="Web.config" />
@@ -144,6 +151,12 @@
   <ItemGroup>
     <Folder Include="Views\Shared\" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -165,7 +178,7 @@
           </IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>True</UseCustomServer>
-          <CustomServerUrl>http://localhost:8080</CustomServerUrl>
+          <CustomServerUrl>http://localhost:86</CustomServerUrl>
           <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
         </WebProjectProperties>
       </FlavorProperties>
