Better tank shape

--- a/ScorchedServer/ScorchedServer/Web.config
+++ b/ScorchedServer/ScorchedServer/Web.config
@@ -55,6 +55,9 @@
       <setting name="tankHeight" serializeAs="String">
         <value>10</value>
       </setting>
+      <setting name="tankGapWidth" serializeAs="String">
+        <value>4</value>
+      </setting>
     </ScorchedServer.Properties.Settings>
   </applicationSettings>
 </configuration>
