--- a/ScorchedServer/ScorchedServer/Properties/Settings.settings
+++ b/ScorchedServer/ScorchedServer/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="tankHeight" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">10</Value>
     </Setting>
+    <Setting Name="tankGapWidth" Type="System.Int32" Scope="Application">
+      <Value Profile="(Default)">4</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
