--- a/src/ScorchedServer/ScorchedServer.csproj
+++ b/src/ScorchedServer/ScorchedServer.csproj
@@ -35,29 +35,8 @@
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
-    <Reference Include="System.CoreEx, Version=1.0.2787.104, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
-    <Reference Include="System.Interactive, Version=1.0.2787.104, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System.Linq.Async, Version=1.0.2787.104, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System.Reactive, Version=1.0.2787.104, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System.Reactive.ClientProfile, Version=1.0.2787.104, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="System.Reactive.ExtendedProfile, Version=1.0.2787.104, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="System.Reactive.Testing, Version=1.0.2787.104, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -90,26 +69,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\Connection.cs" />
-    <Compile Include="Models\Game.cs" />
-    <Compile Include="Models\Landscape.cs" />
-    <Compile Include="Models\LineSegment.cs" />
-    <Compile Include="Models\Messages\UpdatePlayer.cs" />
-    <Compile Include="Models\Messages\Message.cs" />
-    <Compile Include="Models\Messages\FireRequest.cs" />
-    <Compile Include="Models\Messages\GenericMessage.cs" />
-    <Compile Include="Models\Player.cs" />
-    <Compile Include="Models\Shot.cs" />
-    <Compile Include="Models\Messages\UnknownMessage.cs" />
-    <Compile Include="Models\Vector.cs" />
-    <Compile Include="Models\Weapon.cs" />
-    <Compile Include="Models\World.cs" />
+    <Compile Include="Models\Tmoag.cs" />
+    <Compile Include="Models\GenericMessage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Settings.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-      <DependentUpon>Settings.settings</DependentUpon>
-    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
@@ -142,7 +104,12 @@
       <DependentUpon>Web.config</DependentUpon>
     </Content>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Tmoag\Tmoag.csproj">
+      <Project>{67C7D887-148E-43AC-B7AA-7C219F49177F}</Project>
+      <Name>Tmoag</Name>
+    </ProjectReference>
+  </ItemGroup>
   <ItemGroup>
     <None Include="play\cs\fakesocket.coffee" />
     <None Include="play\cs\player.coffee" />
@@ -152,10 +119,6 @@
     <None Include="play\cs\userinput.coffee" />
     <None Include="play\cs\vector.coffee" />
     <None Include="play\cs\world.coffee" />
-    <None Include="Properties\Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
